# spark-web-events

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.MD  README.md  app_config.yaml  mypy.ini  pyproject.toml
.github/workflows/: base-branch.yml  pr-check.yml
data-lake-raw-dev/web_events_airbyte/2023/04/12/: data_events_1.jsonl
spark_web_events_etl/: config_manager.py  main.py
spark_web_events_etl/tasks/: __init__.py  task_runner.py
spark_web_events_etl/tasks/abstract/: task.py
spark_web_events_etl/tasks/curate_data/: dq_checks_curated.yaml  task.py  transformation.py
spark_web_events_etl/tasks/standardise_data/: dq_checks_standardised.yaml  task.py  transformation.py
tests/: conftest.py
tests/integration/: app_test.py
tests/integration/fixtures/: test_app_config.yaml  test_app_config_invalid_tasks.yaml
tests/integration/fixtures/data-lake-raw-test/web_events_airbyte/2023/04/11/: data_events_test.jsonl
tests/integration/fixtures/data-lake-raw-test/web_events_airbyte/2023/04/12/: data_events_test.jsonl
tests/unit/: config_manager_test.py
tests/unit/tasks/curate_data/: transformation_test.py
tests/unit/tasks/curate_data/fixtures/: data.py
tests/unit/tasks/standardise_data/: transformation_test.py
tests/unit/tasks/standardise_data/fixtures/: data.py
