[tool.poetry]
name = "spark-web-events-etl"
version = "0.1.0"
description = ""
authors = ["joseguerr <jose-guerra94@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "3.5.2"
dynaconf = "3.2.1"
delta-spark = "3.2"
soda-core-spark-df = "^3.3.5"
venv-pack = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
chispa = "^0.10.1"
pre-commit = "^3.8.0"
black = "^24.8.0"
mypy = "^1.11.2"
ruff = "^0.6.4"
pytest-cov = "^5.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
source = ["spark_web_events_etl"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 120
